css/style.css
html{
    font-family: 'Montserrat', sans-serif;
}

*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    height: 100vh;
    overflow: hidden;
}

ul, ol, menu{
    list-style: none;
}

a{
    text-decoration: none;
    color: currentColor;
    cursor: pointer;
}

img{
    max-width: 100%;
    display: block;
}

/* Colors palette  */

:root{
    --light: #ffffff;
    --light-grey: #A3A3A3;
    --dark-grey: #282828;
    --dark: black;
    --dark-blue: #141922;
    --green: #ADFF2F;
}

/* utility classes */

.row{
    display: flex;
    flex-wrap: nowrap;
}

.x-small-text{
    font-size: 10px;
}

.small-text{
    font-size: 13px;
}

.medium-text{
    font-size: 15px;
}

.large-text{
    font-size: 25px;
}

.text-bold{
    font-weight: bold;
}

.text-grey{
    color: var(--light-grey);
}

.text-white{
    color: var(--light);
}

.hover-white:hover{
    color: var(--light);
    cursor: pointer;
}

.hover-scale:hover{
    transform: scale(1.2);
}


.circle-img{
    border-radius: 100%;
    aspect-ratio: 1;
    object-fit: cover;
}

.circle-img-hidden{
    border-radius: 100%;
    aspect-ratio: 1;
    overflow: hidden;
}

/* App divisions */

.app{
    display: flex;
    flex-direction: column;
}

.app__main-section{
    display: flex;
    flex-grow: 1;
    background-color: var(--dark-blue);
    max-height: calc(100vh - 90px);
}

/* Main */
/* Side bar */

.app__side-bar{
    display: flex;
    width: 230px;
    background-color: var(--dark);
    flex-shrink: 0;
    color: var(--light-grey);
    z-index: 1;
}

.side-bar{
    display: flex;
    flex-direction: column;
    flex-basis: 100%; 
}

.side-bar__logo{
    width: 130px;
    margin: 20px 20px 25px 20px;
}

.side-bar__logo-sm{
    width: 30px;
    display: none;
}

.side-bar__menu{
    display: flex;
    flex-direction: column;
    margin-bottom: 20px;   
}

.side-bar__menu-items{
    display: flex;
    align-items: center;
    gap: 10px;
    padding: 7px 0px;
    padding-left: 17px;
    font-weight: bold;
    color: var(--light-grey);
    font-size: 13px;
    border-left: 3px solid transparent;
}

.menu-items__img{
    width: 24px;
    opacity: 0.6;
}

.side-bar__menu-items:hover{
    border-left: 3px solid var(--green);
    cursor: pointer;
}

.side-bar__menu-items:hover .menu-items__img{
    opacity: 1;
}

.side-bar__menu-items:hover .menu-items__description{
    color: var(--light);
}

/* Side bar Create playlist */

.side-bar__playlist{
    padding-left: 20px;
    display: flex;
    flex-direction: column;
    flex-basis: 100%;
}

.playlist__title{
    color: var(--light);
    font-size: 15px;
    text-transform: uppercase;
    padding: 14px 0px;
}

.playlist__create{
    display: flex;
    align-items: center;
    gap: 10px;
}

.playlist__create-icon{
    font-size: 36px;
}

.playlist__create-text{
    font-size: 15px;
    font-weight: bold;
}

.side-bar__playlist-items{
    display: flex;
    flex-direction: column;
    flex-grow: 1;
    gap: 24px;
    font-size: 13px;
    font-weight: bold;
}

.side-bar__playlist-items li:hover{
    color: var(--light);
    cursor: pointer;
}

/* Side bar footer */

.side-bar__footer{
    display: flex;
    flex-direction: column;
    gap: 15px;
    padding-left: 20px;
    padding-right: 20px;
    padding-bottom: 7px;
}

.side-bar__footer-inst{
    display: flex;
    gap: 10px;
    padding: 10px 0px;
    border-bottom: 1px solid var(--light-grey);
}


.side-bar__footer-account{
    display: flex;
    align-items: center;
    gap: 10px;
}

.footer-account__icon{
    font-size: 30px;
    cursor: pointer;
}

/* App content */


.app__content{
    flex-grow: 1;
    overflow: auto;
}

/* Main content header */

.app__content-header{
    display: flex;
    justify-content: flex-end;
    align-items: center;
    height: 90px;
    background-color: rgba(0, 0, 0, 0.4);
    padding: 20px;
    position: fixed;
    right: 0;
    left: 0;
}

.header-button{
    font-size: 13px;
    text-transform: uppercase;
    border: 2px solid var(--light);
    border-radius: 999px;
    padding: 12px 44px;
    white-space: nowrap;
}

.header-button:hover{
    transform: scale(1.1);
}

.app__content-nav{
    padding-top: 110px;
}

.nav-list{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    gap: 25px;
}

.nav-list__item{
    padding: 10px 0px;
    color: var(--light-grey);
    text-transform: uppercase;
    font-size: 13px;
    font-weight: bold;
    position: relative;
}

.bottom-border::after{
    content: '';
    position: absolute;
    background-color: transparent;
    width: 0px;
    height: 3px;
    bottom: 0;
    left: 50%;
    transform: translate(-50%, -50%);
    transition: 0.3s ease-in-out;
}

.nav-list__item:hover{
    color: var(--light);
}

.bottom-border:hover::after{
    background-color: var(--green);
    width: 30px;
}

.playlists__img{
    position: relative;
}

.play-icon{
    position: absolute;
    color: var(--light);
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(0, 0, 0, 0.4);
    width: 100%;
    height: 100%;
    opacity: 0;
}

.play-icon{
    display: flex;
    align-items: center;
    justify-content: center;
}

.play {
    font-size: 70px;
}

.playlists__img:hover .play-icon{
    opacity: 1;
    cursor: pointer;
}

/* Main content playlists */

.playlists{
    padding: 20px;
    overflow: hidden;
}

.playlists__content{
    display:flex;
    flex-wrap: nowrap;
    gap: 15px;
    margin-bottom: 40px;
}


.playlists__title{
    margin-bottom: 30px;
}

.playlists__title h2{
    font-size: 25px;
    color: var(--light);
}

.playlists__album{
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 15px;
    flex-basis: calc((100% / 6) - 15px);
}

.playlists__album>img{
    aspect-ratio: 1;
}

.album__title{
    font-size: 15px;
    color: white;
    text-align: center;
}

.album__subtitle{
    font-size: 13px;
    color: var(--light-grey);
    font-weight: bold;
}

.playlists__subtitle{
    color: var(--light-grey);
    font-size: 13px;
    padding-top: 15px;
    font-weight: bold;
}

/* toolbar */

.app__toolbar{
    height: 90px;
    padding: 11px;
    background-color: var(--dark-grey);
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    overflow: hidden;
}

/* Current song */

.toolbar__current{
    display: flex;
    align-items: center;
    gap: 12px;
}

.toolbar__current-img{
    width: 42px;
    aspect-ratio: 1;
}

.toolbar__current-name{
    font-weight: bold;
}

.toolbar__current-name:hover{
    text-decoration: underline;
    cursor: pointer;
}


.toolbar__current-icon{
    margin-left: 30px;
    display: flex;
    gap: 12px;
}

/* Media player */

.toolbar__player{
    display: flex;
    flex-direction: column;
    gap: 10px;
    flex-basis: 50%;
}

.toolbar__player-icons{
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 22px;
    color: var(--light);
}

.player-icons__play{
    padding: 0px 10px;
    font-size: 30px;
}


/* toolbar media player slider */

.toolbar__player-slider{
    display: flex;
    align-items: center;
    gap: 25px;
    cursor: pointer;
}

.player-slider__bar{
    background-color: rgba(255, 255, 255, 0.3);
    flex-grow: 1;
    padding: 3px;
    border-radius: 999px;
    position: relative;
}

.player-slider__bar-fill{
    background-color: white;
    width: 20%;
    padding: 3px;
    border-radius: 999px;
    position: absolute;
    left: 0;
    bottom: 0px;
    cursor: pointer;    
}


.slide__bar-circle{
    color: var(--light);
    position: absolute;
    left: 90%;
    bottom: -7px;
    opacity: 0;
}

.player-slider__bar:hover .slide__bar-circle{
    opacity: 1;
}

.player-slider__bar:hover .player-slider__bar-fill{
    background-color: #ADFF2F;
}

/* toolbar utility */

.toolbar__utility{
    display: flex;
    align-items: center;
    gap: 15px;
    color: var(--light);
    flex-basis: 15%;
}

.toolbar__utility li{
    cursor: pointer;
}

.toolbar__utility-volume{
   flex-grow: 1;
}

/* media query */

/* `xl` applies to large devices (desktops, less than 1200px) */
@media (max-width: 1199.98px) {



 }


/* `lg` applies to medium devices (tablets, less than 992px) */
@media (max-width: 991.98px) {

    .playlists__content{
        flex-wrap: wrap;
    }

    .playlists__album{
        flex-basis: calc((100% / 4) - 15px);
    }

}


 /* `md` applies to small devices (landscape phones, less than 768px) */
@media (max-width: 767.98px) {

    .toolbar__current-icon{
        flex-direction: column;
        gap: 5px;
        margin-left: 18px;
    }

    .toolbar__player-slider{
        gap: 10px;
    }

    .toolbar__utility-volume{
        display: none;
    }

    .playlists__album{
        flex-basis: calc((100% / 2) - 15px);
    }
 }

 /* `sm` applies to x-small devices (portrait phones, less than 576px) */
@media (max-width: 575.98px) {

    .toolbar__current-img{
        width: 30px;
    }

    .toolbar__current-icon{
        margin-left: 10px;
    }

    .toolbar__utility{
        gap: 7px;
    }

    .app__side-bar{
        width: 50px;
    }

    .side-bar__logo-sm{
        display: block;
        margin: 11px 11px 17px 11px;
    }

    .side-bar__logo{
        display: none;
    }

    .side-bar__menu-items{
        padding-left: 12px;
    }

    .menu-items__description{
        display: none;
    }

    .side-bar__playlist {
        display: none;
    }

    .side-bar__menu{
        flex-grow: 1;
    }

    .side-bar__footer{
        padding-left: 13px;
        align-items: center;
    }

    .side-bar__footer-inst{
        border-bottom: none;
    }
 }

    

/* debug */


.debug .app__content{
    border: 1px dashed red;
}

.debug .app__toolbar{
    border: 1px dashed blue;
}

.debug .toolbar{
    border: 1px dashed yellow;
    padding: 10px;
}


.debug [class^='toolbar__']{
    border: 1px dashed purple;
    padding: 10px;
}

